[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/numpad/themes/numpad.theme" type="Theme" id=1]
[ext_resource path="res://ui/numpad/scripts/numpad.gd" type="Script" id=2]
[ext_resource path="res://assets/SFX/threeTone1.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/SFX/twoTone1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/GFX/Interface/PNG/dotWhite.png" type="Texture" id=5]
[ext_resource path="res://assets/GFX/Interface/PNG/dotRed.png" type="Texture" id=6]
[ext_resource path="res://assets/GFX/Interface/PNG/dotGreen.png" type="Texture" id=7]
[ext_resource path="res://assets/GFX/Interface/PNG/metalPanel.png" type="Texture" id=8]
[ext_resource path="res://assets/GFX/Interface/PNG/glassPanel.png" type="Texture" id=9]
[ext_resource path="res://assets/GFX/Interface/PNG/metalPanel_blueCorner.png" type="Texture" id=10]
[ext_resource path="res://assets/GFX/Interface/PNG/metalPanel_yellowCorner.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Numpad" type="Popup"]
margin_right = 400.0
margin_bottom = 440.0
rect_min_size = Vector2( 400, 440 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
correct_sound = ExtResource( 3 )
button_press = ExtResource( 4 )
white_light = ExtResource( 5 )
red_light = ExtResource( 6 )
green_light = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 12.0
bus = "Sound Effects"

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -220.0
margin_right = 200.0
margin_bottom = 220.0
rect_min_size = Vector2( 400, 440 )
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 20

[node name="DisplayContainer" type="CenterContainer" parent="Background/VBoxContainer"]
margin_right = 380.0
margin_bottom = 140.0

[node name="Glass" type="NinePatchRect" parent="Background/VBoxContainer/DisplayContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 40.0
margin_right = 340.0
margin_bottom = 140.0
rect_min_size = Vector2( 300, 140 )
texture = ExtResource( 9 )

[node name="Text" type="Label" parent="Background/VBoxContainer/DisplayContainer/Glass"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -17.5
margin_right = 50.0
margin_bottom = 17.5
grow_horizontal = 2
text = "TEXT"
align = 1

[node name="ButtonContainer" type="GridContainer" parent="Background/VBoxContainer"]
margin_left = 65.0
margin_top = 160.0
margin_right = 315.0
margin_bottom = 390.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 3

[node name="Button1" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_right = 70.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "1"

[node name="Button2" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 90.0
margin_right = 160.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "2"

[node name="Button3" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 180.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "3"

[node name="Button4" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_top = 60.0
margin_right = 70.0
margin_bottom = 110.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "4"

[node name="Button5" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 90.0
margin_top = 60.0
margin_right = 160.0
margin_bottom = 110.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "5"

[node name="Button6" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 180.0
margin_top = 60.0
margin_right = 250.0
margin_bottom = 110.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "6"

[node name="Button7" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_top = 120.0
margin_right = 70.0
margin_bottom = 170.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "7"

[node name="Button8" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 90.0
margin_top = 120.0
margin_right = 160.0
margin_bottom = 170.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "8"

[node name="Button9" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 180.0
margin_top = 120.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "9"

[node name="LED" type="TextureRect" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 11.0
margin_top = 181.0
margin_right = 59.0
margin_bottom = 229.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true

[node name="Button0" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 90.0
margin_top = 180.0
margin_right = 160.0
margin_bottom = 230.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "0"

[node name="ButtonOK" type="Button" parent="Background/VBoxContainer/ButtonContainer"]
margin_left = 180.0
margin_top = 180.0
margin_right = 250.0
margin_bottom = 230.0
rect_min_size = Vector2( 70, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "OK"

[node name="HideDelay" type="Timer" parent="."]
one_shot = true

[node name="IncorrectTimer" type="Timer" parent="."]
one_shot = true
[connection signal="about_to_show" from="." to="." method="_on_Numpad_about_to_show"]
[connection signal="timeout" from="HideDelay" to="." method="_on_HideDelay_timeout"]
[connection signal="timeout" from="IncorrectTimer" to="." method="_on_IncorrectTimer_timeout"]
